wdbc dataset preparation pt2

--- a/Project1/Feature Engineering.ipynb
+++ b/Project1/Feature Engineering.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b9f279",
+   "id": "722ab354",
    "metadata": {},
    "source": [
     "# 3. Breast Cancer Wisconsin"
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "719ea495",
+   "id": "031f151b",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "560028e7",
+   "id": "465aa873",
    "metadata": {
     "scrolled": true
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3b56ca",
+   "id": "e67c956f",
    "metadata": {},
    "source": [
     "As we can see all features are non-null numeric type variables. Which means that in this case one-hot-encoding won't be needed. The only things left to do is to remove collinear and multicollinear ones (maybe remove some outliers? from data) and split data into training and testing sets."
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "4561ae53",
+   "id": "567bb31b",
    "metadata": {},
    "outputs": [
     {
@@ -971,16 +971,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dae90d7",
+   "id": "75487cb6",
    "metadata": {},
    "source": [
-    "Correlation matrix showing that we should remove a fair amount of variables"
+    "Correlation matrix showing that we should probably remove a fair number of variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "ed1a3665",
+   "id": "9a6757e9",
    "metadata": {
     "scrolled": false
    },
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0be358",
+   "id": "f4ffdc56",
    "metadata": {},
    "source": [
     "Removal of variables based only on correlation"
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "dc76510c",
+   "id": "fbb9906c",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4ff62e",
+   "id": "1a23d06a",
    "metadata": {},
    "source": [
     "Removal of variables using Variance Inflation Factor (VIF)"
@@ -1052,8 +1052,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "45acb9bd",
+   "execution_count": 208,
+   "id": "0d017364",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,8 @@
       "Dropping texture_mean with vif=23.709901129257826\n",
       "Dropping concave points_se with vif=18.16312090582923\n",
       "Dropping compactness_se with vif=15.728368747925318\n",
-      "Dropping area_worst with vif=13.976625992787914\n"
+      "Dropping area_worst with vif=13.976625992787914\n",
+      "Dropping concave points_mean with vif=11.176654130350768\n"
      ]
     },
     {
@@ -1107,7 +1108,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>concave points_mean</th>\n",
        "      <th>texture_se</th>\n",
        "      <th>area_se</th>\n",
        "      <th>smoothness_se</th>\n",
@@ -1120,7 +1120,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>564</th>\n",
-       "      <td>0.13890</td>\n",
        "      <td>1.256</td>\n",
        "      <td>158.70</td>\n",
        "      <td>0.010300</td>\n",
@@ -1131,7 +1130,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>565</th>\n",
-       "      <td>0.09791</td>\n",
        "      <td>2.463</td>\n",
        "      <td>99.04</td>\n",
        "      <td>0.005769</td>\n",
@@ -1142,7 +1140,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>566</th>\n",
-       "      <td>0.05302</td>\n",
        "      <td>1.075</td>\n",
        "      <td>48.55</td>\n",
        "      <td>0.005903</td>\n",
@@ -1153,7 +1150,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>567</th>\n",
-       "      <td>0.15200</td>\n",
        "      <td>1.595</td>\n",
        "      <td>86.22</td>\n",
        "      <td>0.006522</td>\n",
@@ -1164,7 +1160,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>568</th>\n",
-       "      <td>0.00000</td>\n",
        "      <td>1.428</td>\n",
        "      <td>19.15</td>\n",
        "      <td>0.007189</td>\n",
@@ -1178,22 +1173,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     concave points_mean  texture_se  area_se  smoothness_se  concavity_se  \\\n",
-       "564              0.13890       1.256   158.70       0.010300       0.05198   \n",
-       "565              0.09791       2.463    99.04       0.005769       0.03950   \n",
-       "566              0.05302       1.075    48.55       0.005903       0.04730   \n",
-       "567              0.15200       1.595    86.22       0.006522       0.07117   \n",
-       "568              0.00000       1.428    19.15       0.007189       0.00000   \n",
+       "     texture_se  area_se  smoothness_se  concavity_se  symmetry_se  \\\n",
+       "564       1.256   158.70       0.010300       0.05198      0.01114   \n",
+       "565       2.463    99.04       0.005769       0.03950      0.01898   \n",
+       "566       1.075    48.55       0.005903       0.04730      0.01318   \n",
+       "567       1.595    86.22       0.006522       0.07117      0.02324   \n",
+       "568       1.428    19.15       0.007189       0.00000      0.02676   \n",
        "\n",
-       "     symmetry_se  fractal_dimension_se  concavity_worst  \n",
-       "564      0.01114              0.004239           0.4107  \n",
-       "565      0.01898              0.002498           0.3215  \n",
-       "566      0.01318              0.003892           0.3403  \n",
-       "567      0.02324              0.006185           0.9387  \n",
-       "568      0.02676              0.002783           0.0000  "
+       "     fractal_dimension_se  concavity_worst  \n",
+       "564              0.004239           0.4107  \n",
+       "565              0.002498           0.3215  \n",
+       "566              0.003892           0.3403  \n",
+       "567              0.006185           0.9387  \n",
+       "568              0.002783           0.0000  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,60 +1249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "e4b1cae3",
+   "execution_count": 207,
+   "id": "6b1f4986",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9261862917398945"
+       "0.9121265377855887"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression(solver='liblinear', random_state=0)\n",
+    "model = LogisticRegression()\n",
     "model.fit(X_wdbc_cleaned, y_wdbc)\n",
     "model.score(X_wdbc_cleaned, y_wdbc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "id": "23efc1df",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['texture_se', 'area_se', 'smoothness_se', 'concavity_se', 'symmetry_se',\n",
-      "       'fractal_dimension_se', 'concavity_worst'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['radius_mean', 'texture_mean', 'smoothness_mean', 'compactness_mean',\n",
-       "       'symmetry_mean', 'fractal_dimension_mean', 'texture_se',\n",
-       "       'smoothness_se', 'symmetry_se', 'symmetry_worst'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(X_wdbc_cleaned.columns)\n",
-    "X_wdbc_cleaned_corr.columns"
    ]
   }
  ],
