Feature engineering ETH fraud and minor changes in Modeling and optimizers

--- a/Project1/Modelling.ipynb
+++ b/Project1/Modelling.ipynb
@@ -12,7 +12,6 @@
     "import measures\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import pandas as pd\n",
     "\n",
     "from sklearn.datasets import make_moons\n",
     "X, y = make_moons()"
@@ -118,12 +117,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5895f457",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "lr_adam = LogisticRegression(optimization='Adaptive Moment Estimation',\n",
     "                             epochs=50,\n",
-    "                             learning_rate=0.001,\n",
+    "                             learning_rate=0.01,\n",
     "                             beta_1=0.9,\n",
     "                             beta_2=0.99,\n",
     "                             epsilon=1e-8\n",
