loading and checking various cleaning strategies of 2 remaining datasets

--- a/Project1/Modelling.ipynb
+++ b/Project1/Modelling.ipynb
@@ -175,7 +175,7 @@
    "execution_count": null,
    "id": "established-folks",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
