--- a/Project1/Feature Engineering.ipynb
+++ b/Project1/Feature Engineering.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "for c in bank_df.columns:\n",
     "    if bank_df[c].dtype=='O':\n",
-    "        print(bank_df[c].unique())"
+    "        print(c,bank_df[c].unique())"
    ]
   },
   {
@@ -208,11 +208,56 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "median-symposium",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "y_bank = bank_df['y']=='no'\n",
+    "bank_df.drop('y', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a77039",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = bank_df['y']\n",
-    "bank_df.drop('y', axis=1)"
+    "X_bank_raw_categorical=bank_df.drop(columns='y').select_dtypes(include='object')\n",
+    "encoder=OneHotEncoder(sparse=False)\n",
+    "encoder.fit(X_bank_raw_categorical)\n",
+    "X_bank_cat_enc=encoder.transform(X_bank_raw_categorical)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4919d400",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "X_bank_numerical=bank_df.select_dtypes(exclude='object')\n",
+    "Mult_Coll=ReduceVIF()\n",
+    "X_bank_numerical = Mult_Coll.fit_transform(X_bank_numerical)\n",
+    "X_bank_enc=X_bank_numerical.join(pd.DataFrame(X_bank_cat_enc,columns=np.concatenate(encoder.categories_)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc48d27a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test=train_test_split(X_bank_enc,y_bank,test_size=0.25)\n",
+    "\n",
+    "model2 = LogisticRegression(max_iter=1e20)\n",
+    "model2.fit(X_train, y_train)\n",
+    "print(X_train.shape[1])\n",
+    "abs(model2.score(X_test, y_test))"
    ]
   },
   {
@@ -459,7 +504,7 @@
    "execution_count": null,
    "id": "465aa873",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -750,21 +795,9 @@
    "outputs": [],
    "source": [
     "X_eth_raw_categorical=X_eth_raw[[' ERC20 most sent token type',' ERC20_most_rec_token_type']].fillna(\"unknown\")\n",
-    "encoder=OneHotEncoder()\n",
+    "encoder=OneHotEncoder(sparse=False)\n",
     "encoder.fit(X_eth_raw_categorical)\n",
     "X_eth_cat_enc=encoder.transform(X_eth_raw_categorical)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4000f3e1",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "X_eth_enc = X_eth_cleaned.join(pd.DataFrame(X_eth_cat_enc.toarray(),columns=np.concatenate(encoder.categories_)))"
    ]
   },
   {
@@ -790,16 +823,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test=train_test_split(pd.DataFrame(X_eth_cat_enc.toarray(),\n",
-    "                                                               columns=np.concatenate(encoder.categories_)),\n",
+    "X_train, X_test, y_train, y_test=train_test_split(pd.DataFrame(X_eth_cat_enc,columns=np.concatenate(encoder.categories_)),\n",
     "                                                  y_eth,\n",
-    "                                                  test_size=0.2\n",
+    "                                                  test_size=0.25\n",
     "                                                 )\n",
     "\n",
     "model2 = LogisticRegression(max_iter=1e20)\n",
     "model2.fit(X_train, y_train)\n",
     "print(X_train.shape[1])\n",
-    "model2.score(X_test, y_test)"
+    "abs(model2.score(X_test, y_test)-model2.score(X_train, y_train))"
    ]
   },
   {
@@ -808,6 +840,16 @@
    "metadata": {},
    "source": [
     "#### Results with categorical features encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67627fda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_eth_enc = X_eth_cleaned.join(pd.DataFrame(X_eth_cat_enc.toarray(),columns=np.concatenate(encoder.categories_)))"
    ]
   },
   {
@@ -822,7 +864,7 @@
     "model2 = LogisticRegression(max_iter=1e20)\n",
     "model2.fit(X_train, y_train)\n",
     "print(X_train.shape[1])\n",
-    "model2.score(X_test, y_test)"
+    "abs(model2.score(X_test, y_test)-model2.score(X_train, y_train))"
    ]
   }
  ],
