--- a/Project1/Feature Engineering.ipynb
+++ b/Project1/Feature Engineering.ipynb
@@ -866,6 +866,31 @@
     "print(X_train.shape[1])\n",
     "abs(model2.score(X_test, y_test)-model2.score(X_train, y_train))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8dbeab68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.array([1,2,3])\n",
+    "b=np.array([1,0,1])\n",
+    "a[b]\n",
+    "a[b==1]"
+   ]
   }
  ],
  "metadata": {
