--- a/Project1/Modelling.ipynb
+++ b/Project1/Modelling.ipynb
@@ -245,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "982eb404",
+   "metadata": {},
+   "source": [
+    "### Tests on retinopathy dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc72cc6a",
@@ -255,11 +263,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import OneHotEncoder ### available? Imho should be, like cmon\n",
-    "from sklearn.model_selection import train_test_split ###hopefully we're allowed to use this too\n",
+    "from sklearn.preprocessing import OneHotEncoder \n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.impute import SimpleImputer\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "from scipy.io import arff\n",
     "\n",
     "class ReduceVIF(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, thresh=5, impute=True, impute_strategy='median'):\n",
@@ -311,8 +320,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io import arff\n",
-    "import pandas as pd\n",
     "data = arff.loadarff('data/messidor_features.arff')\n",
     "retinopathy_df = pd.DataFrame(data[0])\n",
     "retinopathy_df.head()\n",
