Feature Engineering notebooks update

--- a/Project1/FeatureEngineering.ipynb
+++ b/Project1/FeatureEngineering.ipynb
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "governing-miracle",
+   "id": "designed-conservation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "historical-douglas",
+   "id": "sharing-anaheim",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "short-columbia",
+   "id": "digital-japanese",
    "metadata": {
     "scrolled": false
    },
@@ -1715,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "educational-front",
+   "id": "educational-coordination",
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "freelance-refrigerator",
+   "id": "automatic-underground",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "endless-husband",
+   "id": "numerous-enforcement",
    "metadata": {
     "scrolled": false
    },
@@ -3174,7 +3174,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "european-zimbabwe",
+   "id": "harmful-facility",
    "metadata": {},
    "outputs": [
     {
@@ -3748,7 +3748,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "mexican-hamburg",
+   "id": "varying-basement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3758,7 +3758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "prime-oakland",
+   "id": "interim-fluid",
    "metadata": {},
    "outputs": [
     {
@@ -3779,7 +3779,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "administrative-candidate",
+   "id": "lovely-mumbai",
    "metadata": {},
    "outputs": [
     {
@@ -4584,7 +4584,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "likely-subject",
+   "id": "floppy-still",
    "metadata": {},
    "outputs": [
     {
@@ -4978,7 +4978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handy-burning",
+   "id": "forbidden-sponsorship",
    "metadata": {},
    "source": [
     "Without VIF:"
@@ -4987,7 +4987,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "posted-jonathan",
+   "id": "sustained-donna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4998,7 +4998,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "inner-norway",
+   "id": "maritime-processing",
    "metadata": {},
    "outputs": [
     {
@@ -5027,7 +5027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 154,
    "id": "137b6b86",
    "metadata": {},
    "outputs": [
@@ -5044,7 +5044,7 @@
        "0.8041446566436408"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5061,23 +5061,22 @@
    "id": "7e273bab",
    "metadata": {},
    "source": [
-    "#### Results when using only numerical features\n",
     "with VIF reduction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 157,
    "id": "57a2be51",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n"
+      "30\n"
      ]
     },
     {
@@ -5086,58 +5085,58 @@
        "0.7785453067858594"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = LogisticRegression(max_iter=1e20)\n",
-    "model.fit(X_eth_train_cleaned.drop(columns=[' ERC20 most sent token type',' ERC20_most_rec_token_type']), y_eth_train)\n",
-    "print(X_eth_train_cleaned.shape[1])\n",
+    "X_eth_train_cleaned_numeric_vif = X_eth_train_cleaned.drop(columns=[' ERC20 most sent token type',' ERC20_most_rec_token_type'])\n",
+    "model.fit(X_eth_train_cleaned_numeric_vif, y_eth_train)\n",
+    "print(X_eth_train_cleaned_numeric_vif.shape[1])\n",
     "model.score(X_eth_test_cleaned.drop(columns=[' ERC20 most sent token type',' ERC20_most_rec_token_type']), y_eth_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67719e5e",
+   "id": "fresh-sucking",
    "metadata": {},
    "source": [
-    "#### Results when using both numerical and categorical features\n",
-    "with VIF but without rescaling "
+    "With both VIF reduction as well as rescaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "959b15df",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 156,
+   "id": "responsible-series",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "687\n"
+      "30\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7785453067858594"
+       "0.8642828118650955"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ss=StandardScaler()\n",
     "model = LogisticRegression(max_iter=1e20)\n",
-    "model.fit(X_eth_train_ohe, y_eth_train)\n",
-    "print(X_eth_train_ohe.shape[1])\n",
-    "model.score(X_eth_test_ohe, y_eth_test)"
+    "X_eth_train_cleaned_numeric = X_eth_train_cleaned.drop(columns=[' ERC20 most sent token type',' ERC20_most_rec_token_type'])\n",
+    "model.fit(ss.fit_transform(X_eth_train_cleaned_numeric), y_eth_train)\n",
+    "print(X_eth_train_cleaned_numeric.shape[1])\n",
+    "model.score(ss.transform(X_eth_test_cleaned.drop(columns=[' ERC20 most sent token type',' ERC20_most_rec_token_type'])), y_eth_test)"
    ]
   },
   {
@@ -5189,7 +5188,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "minor-leader",
+   "id": "clear-bacon",
    "metadata": {},
    "outputs": [
     {
@@ -5210,7 +5209,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "whole-cleaning",
+   "id": "clean-cancellation",
    "metadata": {
     "scrolled": false
    },
@@ -6006,7 +6005,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "latter-updating",
+   "id": "regulation-timber",
    "metadata": {},
    "outputs": [
     {
