WDBC experiments done, other minor changes

--- a/Project1/experiments/Bank_experiments.ipynb
+++ b/Project1/experiments/Bank_experiments.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bank_df = pd.read_csv('data/bank-additional-full.csv', sep=';')\n",
+    "bank_df = pd.read_csv('../data/bank-additional-full.csv', sep=';')\n",
     "\n",
     "X_bank=bank_df.drop(columns='y')\n",
     "y_bank=(bank_df['y'] == 'yes').astype(int)\n",
