--- a/Project1/experiments/ETH_experiments.ipynb
+++ b/Project1/experiments/ETH_experiments.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "etherneum_df=pd.read_csv('data/transaction_dataset.csv')\n",
+    "etherneum_df=pd.read_csv('../data/transaction_dataset.csv')\n",
     "\n",
     "y_eth=etherneum_df['FLAG']\n",
     "to_drop=['Unnamed: 0','Index','Address','FLAG']\n",
