--- a/Project1/experiments/Retinopathy_experiments.ipynb
+++ b/Project1/experiments/Retinopathy_experiments.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = arff.loadarff('data/messidor_features.arff')\n",
+    "data = arff.loadarff('../data/messidor_features.arff')\n",
     "retinopathy_df = pd.DataFrame(data[0])\n",
     "\n",
     "X_retinopathy=retinopathy_df.drop(columns='Class')\n",
