--- a/Project1/experiments/04_Bank_experiments.ipynb
+++ b/Project1/experiments/04_Bank_experiments.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-yesterday",
+   "id": "material-diving",
    "metadata": {},
    "source": [
     "Basic data info:"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "dietary-terrace",
+   "id": "tight-scotland",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "colonial-thumb",
+   "id": "dimensional-spanish",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-atlanta",
+   "id": "controlled-plenty",
    "metadata": {},
    "source": [
     "No missing values in data, 10 categorical features."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "northern-thickness",
+   "id": "measured-lunch",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-flooring",
+   "id": "serial-wichita",
    "metadata": {},
    "source": [
     "Many observations but target is very imbalanced."
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaged-playback",
+   "id": "distinct-force",
    "metadata": {},
    "source": [
     "#### 1(b)"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "elder-ground",
+   "id": "binary-reasoning",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-tokyo",
+   "id": "completed-hawaii",
    "metadata": {},
    "source": [
     "Only target balancing:"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "inclusive-still",
+   "id": "canadian-council",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "strange-calculator",
+   "id": "compressed-timothy",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-romantic",
+   "id": "forced-denmark",
    "metadata": {},
    "source": [
     "Target balancing and data scaling"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "funky-physics",
+   "id": "rubber-charity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "vocal-ladder",
+   "id": "digital-worthy",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "recognized-trigger",
+   "id": "opened-assets",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "polar-concern",
+   "id": "legitimate-nursing",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "inappropriate-study",
+   "id": "conventional-choice",
    "metadata": {
     "scrolled": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-driver",
+   "id": "declared-fashion",
    "metadata": {},
    "source": [
     "No doubt on the best data transformation combination"
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "legal-attachment",
+   "id": "adolescent-copyright",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exceptional-elizabeth",
+   "id": "afraid-retail",
    "metadata": {},
    "source": [
     "Very small value of optimal learning rate of SGD draws attention."
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suburban-father",
+   "id": "accepting-virginia",
    "metadata": {},
    "source": [
     "This time, relatively small value of beta1 and very high of beta2 (responsible for low input of derivative of each current epoch in tha variance) appeared to be the best parameters."
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-internet",
+   "id": "copyrighted-class",
    "metadata": {},
    "source": [
     "#### 5. Comparing convergence analysis for the \"best\" parameters."
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "returning-profession",
+   "id": "prepared-product",
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "curious-harvard",
+   "id": "straight-pastor",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "devoted-chester",
+   "id": "enclosed-primary",
    "metadata": {},
    "source": [
     "#### 6. Comparison of coefficients in different logistic regression algorithms:"
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "phantom-archives",
+   "id": "judicial-white",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "every-bronze",
+   "id": "younger-clone",
    "metadata": {},
    "outputs": [
     {
@@ -1922,13 +1922,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-hacker",
+   "id": "located-reference",
    "metadata": {},
    "source": [
     "## Conclusions\n",
     "\n",
     "- As usually, convergence on basic version of data is unstable. Data scaling reduces the oscillations\n",
     "- IRLS loss values converged very slowly but the metrics on test data were not significantly worse than in Gradient Descent methods. Maybe GD algorithms tend to overfit.\n",
+    "- SGD convergence is very stable using the best parameters \n",
     "- In the final experiments, GD reached the highest value of F1-score. IRLS and LDA had the highest accuracy but it is not that important on imbalanced data.\n",
     "\n",
     "- Probably for the first time sklearn LR and ADAM coefficients were almost equal"
