polepszona funkcja get_models_ba

--- a/Project2/Python_scripts/tests_eval_models.ipynb
+++ b/Project2/Python_scripts/tests_eval_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "b3d88f16",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "7b3d03f5",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "c130dc94",
    "metadata": {
     "scrolled": true
@@ -57,19 +57,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "a050352c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic model:     0.54\n",
-      "RandomForest model: 0.688\n",
-      "AdaBoost model:     0.5660000000000001\n",
-      "LightGBM model:     0.794\n",
-      "XGBoost model:      0.78\n"
+      "LogisticRegression 0.5680000000000001\n",
+      "RandomForestClassifier 0.6659999999999999\n",
+      "AdaBoostClassifier 0.582\n",
+      "LGBMClassifier 0.732\n",
+      "XGBClassifier 0.746\n"
      ]
     },
     {
@@ -94,49 +110,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Classifier</th>\n",
-       "      <th>Balaned Accuracy</th>\n",
+       "      <th>BA score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>LogisticReg</td>\n",
-       "      <td>0.540</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>RandomForest</td>\n",
-       "      <td>0.688</td>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AdaBoost</td>\n",
-       "      <td>0.566</td>\n",
+       "      <td>AdaBoostClassifier</td>\n",
+       "      <td>0.582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>LightGBM</td>\n",
-       "      <td>0.794</td>\n",
+       "      <td>LGBMClassifier</td>\n",
+       "      <td>0.732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>XGBoost</td>\n",
-       "      <td>0.780</td>\n",
+       "      <td>XGBClassifier</td>\n",
+       "      <td>0.746</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Classifier  Balaned Accuracy\n",
-       "0   LogisticReg             0.540\n",
-       "1  RandomForest             0.688\n",
-       "2      AdaBoost             0.566\n",
-       "3      LightGBM             0.794\n",
-       "4       XGBoost             0.780"
+       "               Classifier  BA score\n",
+       "0      LogisticRegression     0.568\n",
+       "1  RandomForestClassifier     0.666\n",
+       "2      AdaBoostClassifier     0.582\n",
+       "3          LGBMClassifier     0.732\n",
+       "4           XGBClassifier     0.746"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
