minor changes in tests

--- a/Project2/Python_scripts/tests_eval_models.ipynb
+++ b/Project2/Python_scripts/tests_eval_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "b3d88f16",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "7b3d03f5",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c130dc94",
    "metadata": {
     "scrolled": true
@@ -57,10 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "a050352c",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -81,11 +81,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression 0.5680000000000001\n",
-      "RandomForestClassifier 0.6659999999999999\n",
-      "AdaBoostClassifier 0.582\n",
-      "LGBMClassifier 0.732\n",
-      "XGBClassifier 0.746\n"
+      "LogisticRegression 0.528\n",
+      "RandomForestClassifier 0.69\n",
+      "AdaBoostClassifier 0.5700000000000001\n",
+      "LGBMClassifier 0.77\n",
+      "XGBClassifier 0.762\n"
      ]
     },
     {
@@ -117,27 +117,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LogisticRegression</td>\n",
-       "      <td>0.568</td>\n",
+       "      <td>0.528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.666</td>\n",
+       "      <td>0.690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AdaBoostClassifier</td>\n",
-       "      <td>0.582</td>\n",
+       "      <td>0.570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>LGBMClassifier</td>\n",
-       "      <td>0.732</td>\n",
+       "      <td>0.770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>XGBClassifier</td>\n",
-       "      <td>0.746</td>\n",
+       "      <td>0.762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,14 +145,14 @@
       ],
       "text/plain": [
        "               Classifier  BA score\n",
-       "0      LogisticRegression     0.568\n",
-       "1  RandomForestClassifier     0.666\n",
-       "2      AdaBoostClassifier     0.582\n",
-       "3          LGBMClassifier     0.732\n",
-       "4           XGBClassifier     0.746"
+       "0      LogisticRegression     0.528\n",
+       "1  RandomForestClassifier     0.690\n",
+       "2      AdaBoostClassifier     0.570\n",
+       "3          LGBMClassifier     0.770\n",
+       "4           XGBClassifier     0.762"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
