adding option to test classifier parameters and testing scaling

--- a/Project2/Python_scripts/tests_eval_models.ipynb
+++ b/Project2/Python_scripts/tests_eval_models.ipynb
@@ -2,31 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "b3d88f16",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import eval_models\n",
     "import pandas as pd\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "7b3d03f5",
    "metadata": {},
    "outputs": [
@@ -39,127 +31,90 @@
     }
    ],
    "source": [
-    "X_artificial,y_artificial,X_digits,y_digits= eval_models.get_data()\n",
-    "print(X_digits.shape,X_artificial.shape)"
+    "X_art,y_art,X_digits,y_digits= eval_models.get_data()\n",
+    "print(X_digits.shape,X_art.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "c130dc94",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "X_artificial_train,X_artificial_test,y_artificial_train,y_artificial_test=train_test_split(X_artificial,y_artificial,stratify=y_artificial,test_size=0.25)"
+    "X_art_train,X_art_test,y_art_train,y_art_test=train_test_split(X_art,y_art,stratify=y_art,test_size=0.25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "a050352c",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "LogisticRegression 0.514\n",
+      "RandomForestClassifier 0.644\n",
+      "AdaBoostClassifier 0.56\n",
+      "LGBMClassifier 0.782\n",
+      "XGBClassifier 0.764\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "basic_res=eval_models.get_models_ba(X_art_train,\n",
+    "                              X_art_test,\n",
+    "                              y_art_train,\n",
+    "                              y_art_test,\n",
+    "                              logistic_args={\"max_iter\":6000}\n",
+    "                             )\n",
+    "#dopiero przy 6k to coś nie wywala warninga, że za mała liczba iteracji"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7c262086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss=StandardScaler()\n",
+    "X_art_train_scaled=pd.DataFrame(ss.fit_transform(X_art_train), index=X_art_train.index, columns=X_art_train.columns)\n",
+    "X_art_test_scaled=pd.DataFrame(ss.transform(X_art_test), index=X_art_test.index, columns=X_art_test.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d76671b9",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression 0.528\n",
-      "RandomForestClassifier 0.69\n",
-      "AdaBoostClassifier 0.5700000000000001\n",
-      "LGBMClassifier 0.77\n",
-      "XGBClassifier 0.762\n"
+      "LogisticRegression 0.512\n",
+      "RandomForestClassifier 0.658\n",
+      "AdaBoostClassifier 0.56\n",
+      "LGBMClassifier 0.786\n",
+      "XGBClassifier 0.764\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Classifier</th>\n",
-       "      <th>BA score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LogisticRegression</td>\n",
-       "      <td>0.528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AdaBoostClassifier</td>\n",
-       "      <td>0.570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LGBMClassifier</td>\n",
-       "      <td>0.770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XGBClassifier</td>\n",
-       "      <td>0.762</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Classifier  BA score\n",
-       "0      LogisticRegression     0.528\n",
-       "1  RandomForestClassifier     0.690\n",
-       "2      AdaBoostClassifier     0.570\n",
-       "3          LGBMClassifier     0.770\n",
-       "4           XGBClassifier     0.762"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp=eval_models.get_models_ba(X_artificial_train,X_artificial_test,y_artificial_train,y_artificial_test)\n",
-    "tmp"
+    "scaled_res=eval_models.get_models_ba(X_art_train_scaled,\n",
+    "                              X_art_test_scaled,\n",
+    "                              y_art_train,\n",
+    "                              y_art_test,\n",
+    "                              logistic_args={\"max_iter\":100}\n",
+    "                             )\n",
+    "#tutaj reg logistyczna dużo szybciej osiąga zbieżność"
    ]
   }
  ],
